<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/action_add" />
        <item
            android:id="@+id/nav_list"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/action_list" />
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/action_search" />
    </group>

    <item android:title="Geral">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/action_exit" />
        </menu>
    </item>

</menu>
